--- a/package.json
+++ b/package.json
@@ -4,6 +4,20 @@
     "dependencies": {
         "vue": "^2.6.10",
         "firebase": "^7.5.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",   
+        "vue-loader": "^15.7.2"
+    },
+
+    "devDependencies": {
+        "webpack": "^4.41.2",
+        "vue-template-compiler": "2.6.10",
+        "webpack-cli": "3.3.10",
+        "webpack-dev-server": "3.9.0",
+        "babel-loader": "8.0.6",
+        "@babel/core": "7.7.2",
+        "@babel/preset-env": "7.7.1",
+        "css-loader": "3.2.0",
+        "vue-style-loader": "4.1.2",
+        "html-webpack-plugin": "3.2.0"
     }
 }
