--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
     "name": "nesa-chat",
     "version": "0.0.0",
+    "main": "main.js",
+    "scripts": {
+        "serve": "webpack-dev-server --mode development"
+    },
     "dependencies": {
         "vue": "^2.6.10",
         "firebase": "^7.5.0",
-        "express": "^4.17.1",   
+        "express": "^4.17.1",
         "vue-loader": "^15.7.2"
     },
-
     "devDependencies": {
         "webpack": "^4.41.2",
         "vue-template-compiler": "2.6.10",
