--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@babel/preset-env": "7.7.1",
         "css-loader": "3.2.0",
         "vue-style-loader": "4.1.2",
+        "vue-router": "^3.1.3",
         "html-webpack-plugin": "3.2.0"
     }
 }
