--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "css-loader": "3.2.0",
         "vue-style-loader": "4.1.2",
         "vue-router": "^3.1.3",
-        "html-webpack-plugin": "3.2.0"
+        "html-webpack-plugin": "3.2.0",
+        "vuex": "^3.1.2"
     }
 }
